# ConditionalDependencies

./: .gitignore  CMakeLists.txt  build.ps1  copy.ps1  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml
shared/: main.hpp  utils.hpp
